--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-undetected-chromedriver==3.5.3
-webdriver-manager==4.0.1
-python-decouple==3.8
-tqdm==4.66.1
-colorama==0.4.6
-PySimpleGUI==4.60.5
+undetected-chromedriver
+webdriver-manager
+python-decouple
+tqdm
+colorama
+PySimpleGUI
